# GameEngine2D

./: .gitignore  CMakeLists.txt  GameEngine2D.sln  GameEngine2D.vcxproj  GameEngine2D.vcxproj.filters  main.cpp
Engine/assets/: README.md
Engine/assets/display/: display.ini
Engine/include/: ShamanEngine2D.hpp
Engine/include/modules/: DisplayManager.hpp  GraphicsManager.hpp  InputManager.hpp
Engine/lib/glad/: glad.c
Engine/src/: Main.cpp  ShamanEngine2D.cpp
Engine/src/modules/: DisplayManager.cpp  GraphicsManager.cpp  InputManager.cpp
assets/config/: display.ini
doc/: architecture.drawio
doc/doxygen/: Doxyfile
doc/doxygen/html/: _application_8cpp.html  _application_8hpp.html  _application_8hpp_source.html  _audio_loader_8cpp.html  _audio_loader_8hpp.html  _audio_loader_8hpp_source.html  _audio_manager_8cpp.html  _audio_manager_8hpp.html  _audio_manager_8hpp_source.html  _config_loader_8cpp.html  _config_loader_8hpp.html  _config_loader_8hpp_source.html  _display_manager_8cpp.html  _display_manager_8hpp.html  _display_manager_8hpp_source.html  _ecs_manager_8cpp.html  _ecs_manager_8hpp.html  _ecs_manager_8hpp_source.html  _graphics_manager_8cpp.html  _graphics_manager_8hpp.html  _graphics_manager_8hpp_source.html  _gui_manager_8cpp.html  _gui_manager_8hpp.html  _gui_manager_8hpp_source.html  _i_application_8hpp.html  _i_application_8hpp_source.html  _i_audio_loader_8hpp.html  _i_audio_loader_8hpp_source.html  _i_audio_manager_8hpp.html  _i_audio_manager_8hpp_source.html  _i_config_loader_8hpp.html  _i_config_loader_8hpp_source.html  _i_display_manager_8hpp.html  _i_display_manager_8hpp_source.html  _i_ecs_manager_8hpp.html  _i_ecs_manager_8hpp_source.html  _i_graphics_manager_8hpp.html  _i_graphics_manager_8hpp_source.html  _i_gui_manager_8hpp.html  (+117 more)
include/App/: App.hpp
include/Application/: Application.hpp  IApplication.hpp
include/Engine/: Engine.hpp
include/Managers/: IManager.hpp
include/MessageRouter/: IMessageRouter.hpp  MessageRouter.hpp
include/Modules/: IModule.hpp
lib/lib/: glfw3.lib
src/: Main.cpp  main.cpp
src/App/: App.cpp
src/Application/: Application.cpp  Main.cpp
src/Engine/: Engine.cpp
src/MessageRouter/: MessageRouter.cpp
(+80 files in other folders)
